Fixed maps width to be half and half on desktop and stacked on mobile

--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -76,8 +76,9 @@ body {
 
 #googleMap{
   border-style: solid;
-  width:500px;
-  height:380px;
+  width:auto;
+  height:400px;
+  /*padding-bottom: 20px;*/
 }
 
 .infoWindow {
